--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "canvas-sketch": "^0.7.4",
     "canvas-sketch-util": "^1.10.0",
-    "nice-color-palettes": "^3.0.0"
+    "eases": "^1.0.8",
+    "glslify": "^7.1.1",
+    "nice-color-palettes": "^3.0.0",
+    "three": "^0.120.1"
   }
 }
